--- a/bce-web-server/src/app.html
+++ b/bce-web-server/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" color-mode="dark">
+<html lang="en" color-mode="light">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
